// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer should call -engine- middleware 1`] = `
Object {
  "data": Array [
    Object {
      "some": "data",
    },
  ],
  "defaultData": undefined,
  "engine": true,
  "key": "code",
  "name": "testName",
  "prefix": "testPrefix",
  "prev": Object {
    "action": Object {
      "payload": Object {
        "code": "1",
        "some": "info",
      },
      "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
    },
    "state": Object {
      "data": Array [
        Object {
          "some": "data",
        },
      ],
    },
  },
}
`;

exports[`reducer should call -post- middlewares 1`] = `
Object {
  "data": Array [
    Object {
      "some": "data",
    },
  ],
  "defaultData": undefined,
  "key": "code",
  "name": "testName",
  "post1": true,
  "post2": true,
  "prefix": "testPrefix",
  "prev": Object {
    "action": Object {
      "payload": Object {
        "code": "1",
        "some": "info",
      },
      "testName": true,
      "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
    },
    "state": Object {
      "data": Array [
        Object {
          "some": "data",
        },
      ],
      "defaultData": undefined,
      "key": "code",
      "name": "testName",
      "post1": true,
      "prefix": "testPrefix",
      "prev": Object {
        "action": Object {
          "payload": Object {
            "code": "1",
            "some": "info",
          },
          "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
        },
        "state": Object {
          "data": Array [
            Object {
              "some": "data",
            },
          ],
        },
      },
    },
  },
}
`;

exports[`reducer should call -pre- middlewares 1`] = `
Object {
  "data": Array [
    Object {
      "some": "data",
    },
  ],
  "defaultData": undefined,
  "key": "code",
  "name": "testName",
  "pre1": true,
  "pre2": true,
  "prefix": "testPrefix",
  "prev": Object {
    "action": Object {
      "payload": Object {
        "code": "1",
        "some": "info",
      },
      "testName": true,
      "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
    },
    "state": Object {
      "data": Array [
        Object {
          "some": "data",
        },
      ],
      "defaultData": undefined,
      "key": "code",
      "name": "testName",
      "pre1": true,
      "prefix": "testPrefix",
      "prev": Object {
        "action": Object {
          "payload": Object {
            "code": "1",
            "some": "info",
          },
          "type": "@@krf/ADD>TESTPREFIX>TESTNAME",
        },
        "state": Object {
          "data": Array [
            Object {
              "some": "data",
            },
          ],
        },
      },
    },
  },
}
`;

exports[`reducer should initialize an action if undefined 1`] = `
Object {
  "data": Array [
    Object {
      "some": "data",
    },
  ],
  "defaultData": undefined,
  "engine": true,
  "key": "code",
  "name": "testName",
  "prefix": "testPrefix",
  "prev": Object {
    "action": Object {
      "payload": undefined,
      "type": "UNKNOWN",
    },
    "state": Object {
      "data": Array [
        Object {
          "some": "data",
        },
      ],
    },
  },
}
`;
